# mural

./: Cargo.toml
examples/: conversation.rs  interactive.rs
src/: backend.rs  blocks.rs  error.rs  key.rs  lib.rs  render.rs  size.rs  terminal.rs  text.rs  text_block.rs
src/backend/: fake.rs  stdout.rs
src/blocks/: hr.rs  layout.rs  list_item.rs  padding.rs  spinner.rs  textarea.rs  validation.rs
src/blocks/textarea/: editing.rs  rendering.rs  source.rs  visual.rs
src/text/: ansi.rs  body.rs  color.rs  error.rs  line.rs  modifiers.rs  span.rs  style.rs  text.rs  wrap.rs
tests/: ansi_text.rs  backend_lifecycle_polish.rs  cached_partial_redraws.rs  caller_driven_resize.rs  full_rewrite_recovery.rs  identified_blocks.rs  key.rs  minimal_live_render.rs  prebuilt_blocks.rs  render_every_frame.rs  styled_text.rs  textarea.rs  unicode_wrapping.rs
