[package]
name = "brisk"
version = "0.1.0"
edition = "2024"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
description = "Conversational terminal rendering for command-line applications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/devashishdxt/brisk"
documentation = "https://docs.rs/brisk"
keywords = ["terminal", "tui", "renderer", "ansi", "conversation"]
categories = ["command-line-interface"]

[dependencies]
ansi-str = "0.9.0"
crossterm = "0.29.0"
textwrap = "0.16.2"
thiserror = "2.0.18"
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"
